<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.thomas.electro_artist.MainActivity"
    android:id="@+id/relativelayout">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_electro_artist2"
        />
    <Button
        android:id="@+id/to_matrix"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:text="@string/led_matrix"
        android:drawableTop="@drawable/led_matrix"
        android:onClick="onClickToMatrix"
        />
    <Button
        android:id="@+id/to_color_led"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to_matrix"
        android:text="@string/color_led"
        android:drawableTop="@drawable/hue_bar_icon"
        android:onClick="onClickToColorLed"
        />
    <Button
        android:id="@+id/to_BLE"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to_color_led"
        android:text="@string/to_ble"
        android:drawableTop="@drawable/bluetooth_logo"
        android:onClick="onClickToBle"
        />
    <Button
        android:id="@+id/to_test_bench"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/test_bench"
        android:drawableTop="@drawable/laboratory"
        android:onClick="onClickToTestBench"
        />


    
    
</RelativeLayout>
