<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.thomas.electro_artist.BleActivity"
    android:id="@+id/ble_layout">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_electro_artist2"
        />

    <TableRow>
        <TextView
            android:id="@+id/bluetooth_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="10pt"
            android:text="@string/bluetooth_status"/>

        <ToggleButton
            android:id="@+id/bluetooth_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="ON"
            android:textOff="OFF"
            android:onClick="onToggleBluetooth"/>
    </TableRow>

    <ToggleButton
        android:id="@+id/bluetooth_advertise"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/ble_ad"
        android:textOn="@string/ble_not_ad"
        android:onClick="onToggleBluetoothAdvertise"
        />
    <View
        android:layout_height="2dip"
        android:background="#FF909090"
        />



</TableLayout>
