<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.thomas.electro_artist.TestBenchActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_electro_artist2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_bench"
        android:textSize="14pt"/>
    <ToggleButton
        android:id="@+id/test_bench_toggle_advertise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/ble_scan"
        android:onClick="onToggleBluetoothScan"
        />

    <ScrollView>
        <TableLayout
            android:id="@+id/scrollable_table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_led"
                android:textSize="12pt"/>

            <RelativeLayout>
                <!-- <View
                    android:id="@+id/color_sample_display5"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="50dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="#FFFFFFFF"/> -->
                <!--android:layout_below="@id/color_sample_display5" pour le display 0-->
                <View
                    android:id="@+id/color_sample_display0"
                    android:layout_width= "match_parent"
                    android:layout_height="60dp"
                    android:background="#FFFFFFFF"/>
                <!-- <View
                    android:id="@+id/color_sample_display1"
                    android:layout_toRightOf="@id/color_sample_display0"
                    android:layout_below="@id/color_sample_display5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="#E0E0E0E0"/>
                <View
                    android:id="@+id/color_sample_display2"
                    android:layout_toRightOf="@id/color_sample_display1"
                    android:layout_below="@id/color_sample_display5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="#FFFFFFFF"/>
                <View
                    android:id="@+id/color_sample_display3"
                    android:layout_toRightOf="@id/color_sample_display2"
                    android:layout_below="@id/color_sample_display5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="#E0E0E0E0"/>
                <View
                    android:id="@+id/color_sample_display4"
                    android:layout_below="@id/color_sample_display1"
                    android:layout_alignLeft="@id/color_sample_display1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="#FFFFFFFF"/>-->

            </RelativeLayout>

            <View
                android:layout_height="2dip"
                android:background="#FF909090"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/led_matrix"
                android:textSize="12pt"/>
            <TableLayout
                android:id="@+id/matrix_display_table_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true" />
            <View
                android:layout_height="2dip"
                android:background="#FF909090"
                />

            </TableLayout>

    </ScrollView>




</TableLayout>
